// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput as password renders without crashing, matches snapshot 1`] = `
<div>
  <div
    id="PickUpUI"
  >
    <div
      class="PU-94538-root-0-2-1"
    >
      <input
        class="PU-94538-input-0-2-2"
        data-testid="text-input"
        name="firstName"
        type="password"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextInput renders without crashing, matches snapshot 1`] = `
<div>
  <div
    id="PickUpUI"
  >
    <div
      class="PU-49661-root-0-2-1"
    >
      <input
        class="PU-49661-input-0-2-2"
        data-testid="text-input"
        name="firstName"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;
